--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
+    "dev": "vite --config vite.config.ts",
+    "dev:preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,13 +22,18 @@
   "devDependencies": {
     "@decky/rollup": "^1.0.1",
     "@decky/ui": "^4.7.2",
+    "@types/node": "^24.5.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "rollup": "^4.22.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vite": "^6.3.6"
   },
   "dependencies": {
     "@decky/api": "^1.1.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.3.0",
     "tslib": "^2.7.0"
   },
